# sharp-nsls2

./: CMakeLists.txt  README.md
cmake/Modules/: FindArrayfire.cmake  FindFFTW3.cmake  FindSHARP.cmake
data/d1/: README.txt  prb_init.npy  probe.npy  scan.npy
examples/37466/: sharp_nsls2.ipynb
examples/cxi/: README.txt  cxiviewer.ipynb  data2cxi.ipynb  data2cxi.py
examples/e1/: README.txt  cxi_viewer.ipynb  cxiviewer.ipynb  data2cxi.ipynb  data2cxi.py  recon_ptycho.ipynb  sharp-nsls2.ipynb  sharp_nsls2.ipynb  sharp_nsls2.py  show.ipynb  show.py
examples/e1-gnode/: README.txt  sharp_nsls2.py
examples/e1/.ipynb_checkpoints/: data2cxi-checkpoint.ipynb  recon_ptycho-checkpoint.ipynb  sharp-nsls2-checkpoint.ipynb  show-checkpoint.ipynb
examples/e2/: data2cxi.ipynb  recon_ptycho.ipynb  show.ipynb
examples/e2/.ipynb_checkpoints/: show-checkpoint.ipynb
examples/e3/: data2cxi.ipynb  recon_ptycho.ipynb  show.ipynb
examples/e3/.ipynb_checkpoints/: data2cxi-checkpoint.ipynb  show-checkpoint.ipynb
examples/tmp/: recon_ptycho.e3.actual.ipynb  recon_ptycho.e3.actual.probe.ipynb  recon_ptycho.e3.ipynb  recon_ptycho.e3.nolimits.ipynb
include/: CMakeLists.txt  CommunicatorGNode.h  CudaEngineDM.h  CudaEngineNSLS2.h  PySharpNSLS2.h  PythonSharpNSLS2.h  SharpNSLS2.h  sharp_thrust.h
python/: CMakeLists.txt  CMakeLists.txt.cu  PySharpNSLS2.cpp  PythonSharpNSLS2.cpp  sharpnsls2.i
python/sharpnsls2/: __init__.py  main.py
src/: CMakeLists.txt  CommunicatorGNode.cu  CudaEngineDM.cu  CudaEngineNSLS2.cu  SharpNSLS2.cu  engine_epie.cu  engine_epie.h  engine_nsls2.cu  engine_nsls2.h  main-nsls2.cpp  main-nsls2.cu  main.cu  main_epie.cu  main_nsls2.cu  nsls2_engine.cu  nsls2_engine.h  sharp_thrust.h
