PROJECT (sharp-nsls2)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${INCLUDE_LIST})

SET(OBJECTS CudaEngineNSLS2.cu CommunicatorGNode.cu SharpNSLS2.cu )

CUDA_ADD_LIBRARY(sharp-nsls2 SHARED ${OBJECTS})
TARGET_LINK_LIBRARIES(sharp-nsls2 ${LIBRARY_LIST})
CUDA_ADD_CUFFT_TO_TARGET(sharp-nsls2)

INSTALL(TARGETS sharp-nsls2 LIBRARY DESTINATION lib)

# ADD_EXECUTABLE(sharp-nsls2.bin main-nsls2.cpp)
# TARGET_LINK_LIBRARIES(sharp-nsls2.bin sharp-nsls2)
# INSTALL(TARGETS sharp-nsls2.bin RUNTIME DESTINATION bin)

# CUDA_ADD_EXECUTABLE(sharp-nsls2.bin main-nsls2.cu)
# TARGET_LINK_LIBRARIES(sharp-nsls2.bin sharp-nsls2)
# CUDA_ADD_CUFFT_TO_TARGET(sharp-nsls2.bin)
# INSTALL(TARGETS sharp-nsls2.bin RUNTIME DESTINATION bin)


